--- a/src/app/components/contact/contact.component.css
+++ b/src/app/components/contact/contact.component.css
@@ -22,6 +22,8 @@ input{
 button{
         background-color:#000;
         color:#fff;
+        font-family:Courier New;
+        font-style:bold;
 
 }
 textarea{
