--- a/src/app/components/eir/eir.component.css
+++ b/src/app/components/eir/eir.component.css
@@ -16,13 +16,13 @@ h1 {
 
 .accordion {
   width: 100%;
-  max-width: 1000px;
+  max-width: 100%;
   height: 50%;;
   overflow: hidden;
 }
 
 .accordion ul {
-  width: 100%;
+  width: 700px;
   display: table;
   table-layout: fixed;
   margin: 0;
@@ -33,8 +33,8 @@ h1 {
   display: table-cell;
   vertical-align: bottom;
   position: relative;
-  width: 16.666%;
-  height: 600px;
+  width: 16%;
+  height: 700px;
   background-repeat: no-repeat;
   background-position: center center;
   transition: all 500ms ease;
@@ -43,7 +43,7 @@ h1 {
   display: block;
   overflow: hidden;
   width: 100%;
-  padding-bottom: 20px;
+  padding-bottom: 80px;
 }
 .accordion ul li div a {
   display: block;
@@ -97,7 +97,7 @@ h1 {
 }
 
 .accordion ul:hover li {
-  width: 1%;
+  width: 2%;
 }
 .accordion ul:hover li:hover {
   width: 100%;
@@ -140,7 +140,8 @@ h1 {
     max-width: 100%;
   }  
   .accordion {
-    max-width: 600px;
+    max-width: 700px;
+    max-height: 700px;
   }
 }
 
@@ -155,7 +156,7 @@ h1 {
 
 @media (min-width: 1200px) { 
   .accordion {
-    max-width: 1000px;
+    max-width: 700px;
   }
 
   .container{
