--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -6,14 +6,19 @@
     <div class="row contact-row mt-5">
       <div class="col-12  col-sm-12  col-md-12  col-lg-12 col-xl-12 my-auto mt-5">
        <form class="mx-auto" #contact="ngForm" (ngSubmit)="onSubmit(contact.value)">
-          <div class="form-group">
-            <input type="text" class="form-control text-center" required (ngModel)="model.email" name="email" placeholder="ENTER EMAIL"
+          <div class="form-group" [ngClass]="{ 'has-danger': email.invalid && (email.dirty || email.touched), 'has-success': email.valid && (email.dirty ||
+          email.touched)}">
+            <input type="text" emailvalidator class="form-control text-center" required (ngModel)="model.email" name="email" placeholder="ENTER EMAIL"
               #email="ngModel">
+            
           </div>
           <hr>
-          <div class="form-group">
-            <textarea placeholder="ENTER MESSAGE" class="form-control" required (ngModel)="model.message" rows="5" name="message"></textarea>
+          <div class="form-group" [ngClass]="{ 'has-danger': textarea.errors?.minlength, 'has-success':textarea.valid}">           
+           <textarea placeholder="ENTER MESSAGE"  #textarea="ngModel" class="form-control" required minlength="5" maxlength="1000" (ngModel)="model.message" rows="5" name="message">
+
+           </textarea>
           </div>
+
           <button type="submit" [disabled]="!contact.form.valid" class="btn float-right">SUBMIT</button>
         </form>
       </div>
