--- a/src/app/components/not-found/not-found.component.html
+++ b/src/app/components/not-found/not-found.component.html
@@ -1,6 +1,6 @@
 <div class="container" [BackDirective]="'white'">
-  <div class="row contact-row h-100">
+  <div class="row contact-row h-100 mb-5">
     <div class="col-4  col-sm-4  col-md-2 col-lg-2 col-xl-2 my-auto mx-auto ">
-      <p class="text-center">NOT FOUND</p>
+      <h2 class="mb-5"><p class="text-center">NOT FOUND.</p></h2>
     </div>
   </div>
