--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -12,4 +12,8 @@
   <li class="nav-item pt-2">
     <a class="nav-link" [routerLink]="['/contact']">CONTACT</a>
   </li>
-</ul></div>
+</ul>
+<P>{{this.errors}}</P>
+<P>{{this.data}}</P>
+
+</div>
