--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -12,8 +12,9 @@
   <li class="nav-item pt-2">
     <a class="nav-link" [routerLink]="['/contact']">CONTACT</a>
   </li>
+  <P>asdasD:{{this.errors}}</P>
+  <P>asdasD:{{this.data}}</P>
 </ul>
-<P>{{this.errors}}</P>
-<P>{{this.data}}</P>
+
 
 </div>
