--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -47,10 +47,10 @@
                         <a class="nav-link" [routerLink]="['/projects']">PROJECTS</a>
                     </li>
                     <li class="nav-item pt-2">
-                        <a class="nav-link" href=""  (click)="pdf()">SAMPLE</a>
+                        <a class="nav-link" href="" (click)="pdf()">SAMPLE</a>
                     </li>
                     <li class="nav-item pt-2">
-                        <a class="nav-link" href="">CONTACT</a>
+                        <a class="nav-link" [routerLink]="['/projects']" href="">CONTACT</a>
                     </li>
                 </ul>
             </div>
