--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -50,7 +50,7 @@
                         <a class="nav-link" href="" (click)="pdf()">SAMPLE</a>
                     </li>
                     <li class="nav-item pt-2">
-                        <a class="nav-link" [routerLink]="['/projects']" href="">CONTACT</a>
+                        <a class="nav-link" [routerLink]="['/contact']" href="">CONTACT</a>
                     </li>
                 </ul>
             </div>
