--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -65,7 +65,7 @@ h1{
 }
 
 .hoverImg1{
-    background-image: linear-gradient(to left, rgba(0,0,0,1), rgba(255,255,255,0.4)), url('../../../assets/img/eir.jpg');
+    background-image: linear-gradient(to left, rgba(0,0,0,1), rgba(255,255,255,0.4)), url('../../../assets/img/cover-back.png');
     background-position: right bottom;
     background-size:100% auto;
     -webkit-background-size: cover;
@@ -77,7 +77,7 @@ h1{
     animation: myfirst 3s ;
 }
 .hoverImg2{
-    background-image: linear-gradient(to right, rgba(0,0,0,1), rgba(255,255,255,0.4)), url('../../../assets/img/db.jpg');
+    background-image: linear-gradient(to right, rgba(0,0,0,1), rgba(255,255,255,0.4)), url('../../../assets/img/cover-back.png');
     background-position: left bottom;
     background-size:100% auto;
     -webkit-background-size: cover;
@@ -142,7 +142,7 @@ h1{
         height:100%;
     } 
        .hoverImg1{
-    background-image: linear-gradient(to left, rgba(0,0,0,1), rgba(255,255,255,0.4)), url('../../../assets/img/eir.jpg');
+    background-image: linear-gradient(to left, rgba(0,0,0,1), rgba(255,255,255,0.4)), url('../../../assets/img/cover-back.png');
     background-position: right bottom;
     background-size:100% 25%;
     -webkit-background-size: cover;
@@ -154,7 +154,7 @@ h1{
     animation: myfirst 3s ;
 }
 .hoverImg2{
-    background-image: linear-gradient(to right, rgba(0,0,0,1), rgba(255,255,255,0.4)), url('../../../assets/img/db.jpg');
+    background-image: linear-gradient(to right, rgba(0,0,0,1), rgba(255,255,255,0.4)), url('../../../assets/img/cover-back.png');
     background-position: left bottom;
     background-size:100% 25%;
     -webkit-background-size: cover;
