--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -8,7 +8,7 @@
                <div  class="container mt-5 text-right">
                 <h1 class="h-eir">EIR</h1>
                 <a [routerLink]="['/eir']">
-                <img class="imgThumb rounded float-right mt-4"  (mouseenter) ="showImg1 = true" (mouseleave) ="showImg1 = false" src="../assets/img/eir-1.jpg" alt="">
+                <img class="imgThumb rounded float-right mt-4"  (mouseenter) ="showImg1 = true" (mouseleave) ="showImg1 = false" src="../assets/img/cover.png" alt="">
                 </a> 
             </div>
         </div>
