--- a/src/app/components/eir/eir.component.html
+++ b/src/app/components/eir/eir.component.html
@@ -8,34 +8,34 @@
       <ul>
         <li>
           <div>
-            <a class="mx-auto">
+            <!-- <a class="mx-auto">
               <h2>Lorem Ipsum</h2>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
-            </a>
+            </a> -->
           </div>
         </li>
         <li>
           <div>
-            <a class="mx-auto">
+            <!-- <a class="mx-auto">
               <h2>Lorem Ipsum</h2>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
-            </a>
+            </a> -->
           </div>
         </li>
         <li>
           <div>
-            <a class="mx-auto">
+            <!-- <a class="mx-auto">
               <h2>Lorem Ipsum</h2>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
-            </a>
+            </a> -->
           </div>
         </li>
         <li>
           <div>
-            <a class="mx-auto">
+            <!-- <a class="mx-auto">
               <h2>Lorem Ipsum</h2>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
-            </a>
+            </a> -->
           </div>
         </li>
       </ul>
