--- a/src/app/components/eir/eir.component.html
+++ b/src/app/components/eir/eir.component.html
@@ -7,57 +7,32 @@
     <div class="accordion mx-auto d-none d-sm-none d-md-inline d-lg-inline d-xl-inline col-8 col-sm-12 col-md-12 col-lg-12 col-xl-12 ">
       <ul>
         <li>
-          <div>
-            <!-- <a class="mx-auto">
-              <h2>Lorem Ipsum</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
-            </a> -->
-          </div>
         </li>
         <li>
-          <div>
-            <!-- <a class="mx-auto">
-              <h2>Lorem Ipsum</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
-            </a> -->
-          </div>
         </li>
         <li>
-          <div>
-            <!-- <a class="mx-auto">
-              <h2>Lorem Ipsum</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
-            </a> -->
-          </div>
         </li>
         <li>
-          <div>
-            <!-- <a class="mx-auto">
-              <h2>Lorem Ipsum</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
-            </a> -->
-          </div>
         </li>
       </ul>
     </div>
    </div>
    <div class="row d-display d-sm-display d-md-none d-lg-none d-xl-none">
      <div class="col-12 col-sm-12 col-md-12 pr-0 pr-sm-0 pr-md-0">
-          <img src="../assets/img/acor-1.jpg" alt="">
+          <img src="../assets/img/acor-1.JPG" alt="">
      </div>
     <div class="col-12 col-sm-12 col-md-12 pr-0 pr-sm-0 pr-md-0">
-          <img src="../assets/img/acor-2.jpg" alt="">
+          <img src="../assets/img/acor-2.JPG" alt="">
      </div>
     <div class="col-12 col-sm-12 col-md-12 pr-0 pr-sm-0 pr-md-0">
-          <img src="../assets/img/acor-3.jpg" alt="">    
+          <img src="../assets/img/acor-3.JPG" alt="">    
     </div>
     <div class="col-12 col-sm-12 col-md-12 pr-0 pr-sm-0 pr-md-0">
-          <img src="../assets/img/acor-4.jpg" alt="">
+          <img src="../assets/img/acor-4.JPG" alt="">
     </div>
     </div>
-
+<div class="row mt-5 ml-lg-5 pl-lg-5">
+  <img [routerLink]="['/home']" class="logo float-left mb-5 d-none d-sm-none d-md-none d-lg-inline d-xl-inline" src="../assets/img/logo-black.svg"
+    alt="">
 </div>
-        <div class="row mt-5 ml-lg-5 pl-lg-5">
-          <img [routerLink]="['/home']" class="logo float-left mb-5 d-none d-sm-none d-md-none d-lg-inline d-xl-inline" src="../assets/img/logo-black.svg"
-            alt="">
-        </div>
+</div>
