--- a/src/app/components/eir/eir.component.html
+++ b/src/app/components/eir/eir.component.html
@@ -19,16 +19,16 @@
    </div>
    <div class="row d-display d-sm-display d-md-none d-lg-none d-xl-none">
      <div class="col-12 col-sm-12 col-md-12 pr-0 pr-sm-0 pr-md-0">
-          <img src="../assets/img/acor-1.JPG" alt="">
+          <img src="../assets/img/slide-1.png" alt="">
      </div>
     <div class="col-12 col-sm-12 col-md-12 pr-0 pr-sm-0 pr-md-0">
-          <img src="../assets/img/acor-2.JPG" alt="">
+          <img src="../assets/img/slide-2.png" alt="">
      </div>
     <div class="col-12 col-sm-12 col-md-12 pr-0 pr-sm-0 pr-md-0">
-          <img src="../assets/img/acor-3.JPG" alt="">    
+          <img src="../assets/img/slide-3.png" alt="">    
     </div>
     <div class="col-12 col-sm-12 col-md-12 pr-0 pr-sm-0 pr-md-0">
-          <img src="../assets/img/acor-4.JPG" alt="">
+          <img src="../assets/img/slide-4.png" alt="">
     </div>
     </div>
 <div class="row mt-5 ml-lg-5 pl-lg-5">
