--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -58,7 +58,7 @@ h1{
 }
 
 .hoverImg1{
-    background-image: linear-gradient(to left, rgba(0,0,0,1), rgba(73, 73, 73, 0.1)), url('../../../assets/img/cover-back.png');
+    background-image: linear-gradient(to left, rgba(0,0,0,1), rgba(73, 73, 73, 0.1)), url('../../../assets/img/back-EIR.png');
     background-position: right bottom;
     background-size:100% auto;
     -webkit-background-size: cover;
@@ -70,7 +70,7 @@ h1{
     animation: myfirst 3s ;
 }
 .hoverImg2{
-    background-image: linear-gradient(to right, rgba(0,0,0,1), rgba(73, 73, 73, 0.1)), url('../../../assets/img/cover-back.png');
+    background-image: linear-gradient(to right, rgba(0,0,0,1), rgba(73, 73, 73, 0.1)), url('../../../assets/img/back-DB.png');
     background-position: left bottom;
     background-size:100% auto;
     -webkit-background-size: cover;
@@ -135,7 +135,7 @@ h1{
         height:100%;
     } 
        .hoverImg1{
-    background-image: linear-gradient(to left, rgba(0,0,0,1), rgba(73, 73, 73, 0.1)), url('../../../assets/img/cover-back.png');
+    background-image: linear-gradient(to left, rgba(0,0,0,1), rgba(73, 73, 73, 0.1)), url('../../../assets/img/back-EIR.png');
     background-position: right bottom;
     background-size:100% 25%;
     -webkit-background-size: cover;
@@ -147,7 +147,7 @@ h1{
     animation: myfirst 3s ;
 }
     .hoverImg2{
-        background-image: linear-gradient(to right, rgba(0,0,0,1), rgba(73, 73, 73, 0.1)), url('../../../assets/img/cover-back.png');
+        background-image: linear-gradient(to right, rgba(0,0,0,1), rgba(73, 73, 73, 0.1)), url('../../../assets/img/back-DB.png');
         background-position: left bottom;
         background-size:100% 25%;
         -webkit-background-size: cover;
