--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -8,7 +8,7 @@
                <div  class="container mt-5 text-right">
                 <h1 class="h-eir">EIR</h1>
                 <a [routerLink]="['/eir']">
-                <img class="imgThumb  float-right mt-4"  (mouseenter) ="showImg1 = true" (mouseleave) ="showImg1 = false" src="../assets/img/cover.png" alt="">
+                <img class="imgThumb  float-right mt-4"  (mouseenter) ="showImg1 = true" (mouseleave) ="showImg1 = false" src="../assets/img/EIR.png" alt="">
                 </a> 
             </div>
         </div>
@@ -21,7 +21,7 @@
             <div class="container mt-5 text-left">
                 <h1 class="h-db">DB</h1>
                 <a [routerLink]="['/db']">
-                <img class="imgThumb  float-left mt-4"  (mouseenter) ="showImg2 = true" (mouseleave) ="showImg2 = false" src="../assets/img/db-1.jpg" alt="">
+                <img class="imgThumb  float-left mt-4"  (mouseenter) ="showImg2 = true" (mouseleave) ="showImg2 = false" src="../assets/img/DB.png" alt="">
                 </a>
             </div>
          </div>
