--- a/src/app/components/db/db.component.html
+++ b/src/app/components/db/db.component.html
@@ -1,8 +1,10 @@
-  <div class="container ml-xl-5 ml-lg-5 mt-5" [BackDirective]="'white'" >
+<div class="container ml-xl-5 ml-lg-5 mt-5" [BackDirective]="'white'" >
     <div class="main-row row mt-xl-5 ml-xl-5 pl-xl-5 mt-md-5 ml-md-5 pl-md-0">
     <div class="col-lg-12 ml-md-5 pl-md-5 pr-md-0 col-xl-12 p-lg-5 m-lg-5 p-xl-5 m-xl-5">
       <div class="row mt-5">
-        <img [routerLink]="['/home']" class="logo-mobile mx-auto mb-5 d-inline d-sm-inline d-md-inline d-lg-none d-xl-none" src="../assets/img/logo-black.svg" alt="">
+                <div class="col-12 pl-5 pr-5">
+                  <app-header-black></app-header-black>
+                </div>
         </div>
       <div class="row">
         <div class="col-lg-3 col-xl-3 col-md-10 ml-md-1 col-10 mt-2 mx-auto m-md-1 m-lg-1 text-center">
@@ -56,17 +58,17 @@
                    <p class="pb-2">Choose channels to follow.</p>
                 </div>
         </div>
-        <div class="row">
+        <div class="row mb-5">
           <div  *ngIf="showButton === true" class="more col-lg-3 col-xl-3 col-md-10 col-sm-10 col-10 mt-md-2 mt-sm-2 mt-2" style="border:none;">
             <a class="text-center">
               <p (click)="show()">Show More</p>
             </a>
           </div>
-                    <div  *ngIf="showButton === false" class="more col-lg-3 col-xl-3 col-md-10 col-sm-10 col-10 mt-md-2 mt-sm-2 mt-2" style="border:none;">
-                      <a class="text-center">
-                        <p (click)="show()">Show Less</p>
-                      </a>
-                    </div>
+          <div  *ngIf="showButton === false" class="more col-lg-3 col-xl-3 col-md-10 col-sm-10 col-10 mt-md-2 mt-sm-2 mt-2" style="border:none;">
+            <a class="text-center">
+              <p (click)="show()">Show Less</p>
+            </a>
+          </div>
     </div>
     </div>
     <div class="row mt-5">
@@ -74,4 +76,13 @@
         alt="">
     </div>
   </div>
-    
+     <div class="row row-fix d-block d-sm-block d-md-block d-lg-none d-xl-none">
+      <div class="col-lg-12 col-md-12 col-sm-12 col-12 h-100">
+          
+      </div>
+     </div>
+    <div class="row fixed-bottom d-inline d-sm-inline d-md-inline d-lg-none d-xl-none mt-5" style="background-color:black;">
+      <app-footer class="w-100"></app-footer>
+    </div>
+</div>
+       
