--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -8,13 +8,13 @@
        <form class="mx-auto" #contact="ngForm" (ngSubmit)="onSubmit(contact.value)">
           <div class="form-group" [ngClass]="{ 'has-danger': email.invalid && (email.dirty || email.touched), 'has-success': email.valid && (email.dirty ||
           email.touched)}">
-            <input type="text" emailvalidator class="form-control text-center" required (ngModel)="model.email" name="email" placeholder="ENTER EMAIL"
+            <input type="text" emailvalidator class="form-control text-center" required (ngModel)="this.email" name="email" placeholder="ENTER EMAIL"
               #email="ngModel">
             
           </div>
           <hr>
           <div class="form-group" [ngClass]="{ 'has-danger': textarea.errors?.minlength, 'has-success':textarea.valid}">           
-           <textarea placeholder="ENTER MESSAGE"  #textarea="ngModel" class="form-control" required minlength="5" maxlength="1000" (ngModel)="model.message" rows="5" name="message">
+           <textarea placeholder="ENTER MESSAGE"  #textarea="ngModel" class="form-control" required minlength="5" maxlength="1000" (ngModel)="this.message" rows="5" name="message">
 
            </textarea>
           </div>
