--- a/src/app/components/header-black/header-black.component.html
+++ b/src/app/components/header-black/header-black.component.html
@@ -1,6 +1,8 @@
-  <div class="row">
-    <img class="logo p-0 mx-auto"  [routerLink]="['/home']" src="../assets/img/logo-black.svg" alt="">
+  <div class="row ">
+    <img class="logo p-0 float-left d-inline d-sm-none d-md-none d-lg-none d-xl-none"  [routerLink]="['/home']" src="../assets/img/logo-black.svg" alt="">
+    <img class="logo p-0 mx-auto d-none d-sm-inline d-md-inline d-lg-inline d-xl-inline" [routerLink]="['/home']" src="../assets/img/logo-black.svg"
+            alt="">
   </div>
-  <div class="row">
-    <p class="mx-auto date mt-4">{{ valueDate | date: 'MM/dd/yyyy h:mm a' }}</p>
+  <div class="row mt-4 ">
+    <p class="mx-auto date d-none d-sm-inline d-md-inline d-lg-inline d-xl-inline">{{ valueDate | date: 'MM/dd/yyyy h:mm a' }}</p>
   </div>
