--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -1,125 +1,136 @@
     <div  class="container mt-5" [BackDirective]="'white'">
-        <div  class="row mt-5">
+        <div  class="row mt-2">
           <div class="col-12 pl-4 mt-5">
               <app-header-black></app-header-black>
           </div>
         </div>
-        <div class="row mt-5">
-          <div href="" class="show col-lg-4 col-md-6 col-sm-12 col-12 pl-4">
+        <div class="row mt-5" *ngIf="mobile === false">
+          <div href="" class="show col-xl-4 col-lg-4 col-md-6 col-sm-12 col-12 pl-4">
             <img src="../assets/img/projects-svg/slide-1.svg">
             <span><p class="text text-center">CHASE BANK</p><p class="price text-center">$200,000</p></span>
           </div>
-          <div href="" class="show col-lg-4 col-md-6 col-sm-12 col-12 pl-4">
+          <div href="" class="show col-xl-4 col-lg-4 col-md-6 col-sm-12 col-12 pl-4">
             <img src="../assets/img/projects-svg/slide-2.svg">
             <span>
                 <p class="text text-center">LUXOTTICA</p>
                 <p class="price text-center">$20,000</p>
             </span>
           </div>
-          <div href="" class="show col-lg-4 col-md-6 col-sm-12 col-12 pl-4">
+          <div href="" class="show col-xl-4 col-lg-4 col-md-6 col-sm-12 col-12 pl-4">
             <img stlye= "width:300px" src="../assets/img/projects-svg/slide-3.svg">
             <span>
               <p stlye= "width:300px" class="text text-center">GK ELITE</p>
               <p class="price text-center">$17,500</p>
             </span>
           </div>
-          <div href="" class="show col-lg-4 col-md-6 col-sm-12 col-12 pl-4">
+          <div href="" class="show col-xl-4 col-lg-4 col-md-6 col-sm-12 col-12 pl-4">
             <img src="../assets/img/projects-svg/slide-4.svg">
             <span>
               <p class="text text-center">SALLY BEAUTY</p>
               <p class="price text-center">$15,000</p>
             </span>
           </div>
-          <div href="" class="show col-lg-4 col-md-6 col-sm-12 col-12 pl-4">
+          <div href="" class="show col-xl-4 col-lg-4 col-md-6 col-sm-12 col-12 pl-4">
             <img src="../assets/img/projects-svg/slide-5.svg">
             <span>
               <p class="text text-center">STARBUCKS</p>
               <p class="price text-center">$20,000</p>
             </span>
           </div>
-          <div href="" class="show col-lg-4 col-md-6 col-sm-12 col-12 pl-4">
+          <div href="" class="show col-xl-4 col-lg-4 col-md-6 col-sm-12 col-12 pl-4">
             <img src="../assets/img/projects-svg/slide-6.svg">
             <span>
               <p class="text text-center">SCARBOROUGH TWEED</p>
               <p class="price text-center">$12,000</p>
             </span>
           </div>
-          <div href="" class="show col-lg-4 col-md-6 col-sm-12 col-12 pl-4">
+          <div href="" class="show col-xl-4 col-lg-4 col-md-6 col-sm-12 col-12 pl-4">
             <img src="../assets/img/projects-svg/slide-7.svg">
             <span>
               <p class="text text-center">UNDER ARMOUR</p>
               <p class="price text-center">$11,000</p>
             </span>
           </div>
-          <div href="" class="show col-lg-4 col-md-6 col-sm-12 col-12 pl-4">
+          <div href="" class="show col-xl-4 col-lg-4 col-md-6 col-sm-12 col-12 pl-4">
             <img src="../assets/img/projects-svg/slide-8.svg">
             <span>
               <p class="text text-center">MOLESKINE</p>
               <p class="price text-center">$10,000</p>
             </span>
           </div>
-          <div href="" class="show col-lg-4 col-md-6 col-sm-12 col-12 pl-4">
+          <div href="" class="show col-xl-4 col-lg-4 col-md-6 col-sm-12 col-12 pl-4">
             <img src="../assets/img/projects-svg/slide-9.svg">
             <span>
               <p class="text text-center">WEIGHT WATCHERS</p>
               <p class="price text-center">$10,000</p>
             </span>
           </div>
-          <div href="" class="show col-lg-4 col-md-6 col-sm-12 col-12 pl-4">
+          <div href="" class="show col-xl-4 col-lg-4 col-md-6 col-sm-12 col-12 pl-4">
             <img src="../assets/img/projects-svg/slide-10.svg">
             <span>
               <p class="text text-center">CRISLU</p>
               <p class="price text-center">$9,800</p>
             </span>
           </div>
-          <div href="" class="show col-lg-4 col-md-6 col-sm-12 col-12 pl-4">
+          <div href="" class="show col-xl-4 col-lg-4 col-md-6 col-sm-12 col-12 pl-4">
             <img src="../assets/img/projects-svg/slide-11.svg">
             <span>
               <p class="text text-center">ACHIEVERS</p>
               <p class="price text-center">$8,500</p>
             </span>
           </div>
-          <div href="" class="show col-lg-4 col-md-6 col-sm-12 col-12 pl-4">
+          <div href="" class="show col-xl-4 col-lg-4 col-md-6 col-sm-12 col-12 pl-4">
             <img src="../assets/img/projects-svg/slide-12.svg">
             <span>
               <p class="text text-center">FACEBOOK</p>
               <p class="price text-center">$8,000</p>
             </span>
           </div>
-          <div href="" class="show col-lg-4 col-md-6 col-sm-12 col-12 pl-4">
+          <div href="" class="show col-xl-4 col-lg-4 col-md-6 col-sm-12 col-12 pl-4">
             <img src="../assets/img/projects-svg/slide-13.svg">
             <span>
               <p class="text text-center">WOOLRICH</p>
               <p class="price text-center">$7,500</p>
             </span>
           </div>
-          <div href="" class="show col-lg-4 col-md-6 col-sm-12 col-12 pl-4">
+          <div href="" class="show col-xl-4 col-lg-4 col-md-6 col-sm-12 col-12 pl-4">
             <img src="../assets/img/projects-svg/slide-14.svg">
           <span>
             <p class="text text-center">ALEX AND ANI</p>
             <p class="price text-center">$7,500</p>
           </span>
         </div>
-          <div href="" class="show col-lg-4 col-md-6 col-sm-12 col-12 pl-4">
+          <div href="" class="show col-xl-4 col-lg-4 col-md-6 col-sm-12 col-12 pl-4">
             <img src="../assets/img/projects-svg/slide-15.svg">
             <span>
               <p class="text text-center">GOOGLE</p>
               <p class="price text-center">$6,000</p>
             </span>
           </div>
-          <div href="" class="show col-lg-4 col-md-6 col-sm-12 col-12 pl-4">
+          <div href="" class="show col-xl-4 col-lg-4 col-md-6 col-sm-12 col-12 pl-4">
             <img src="../assets/img/projects-svg/slide-16.svg">
             <span>
               <p class="text text-center">TRIMARK</p>
               <p class="price text-center">$6,000</p>
             </span>
           </div>
-          <div href="" class="show col-lg-4 col-md-6 col-sm-12 col-12 pl-4">
+          <div href="" class="show col-xl-4 col-lg-4 col-md-6 col-sm-12 col-12 pl-4">
             <img src="../assets/img/projects-svg/slide-17.svg">
             <span>
               <p class="text text-center">PAYPAL</p>
               <p class="price text-center">$5,000</p>
             </span>
           </div>
-        </div>    
+        </div>
+        <div *ngIf="mobile === true" class="row">
+          <app-child-projects class="mx-auto"></app-child-projects>
+        </div>
+        <div class="row-fix d-display d-sm-display d-md-none d-lg-none d-xl-none">
+          <div class="col-lg-12 col-md-12 col-sm-12 col-12">
+          
+          </div>
+        </div>  
+        <div class="row fixed-bottom d-inline d-sm-inline d-md-none d-lg-none d-xl-none mt-5" style="background-color:black;">
+          <app-footer class="w-100 mb-4"></app-footer>
+        </div>
 </div>
