--- a/src/app/components/sap/sap.component.html
+++ b/src/app/components/sap/sap.component.html
@@ -1,6 +1,6 @@
 <div class="container mt-5 p-0" [BackDirective]="'white'">
   <div class="row mt-5">
-    <div class="col-6 mt-5 pr-5 mx-auto">
+    <div class="col-12 pl-5 mt-5 pr-5">
           <app-header-black></app-header-black>
     </div>
   </div>
@@ -16,6 +16,12 @@
       </p>
     </div>
   </div>
-     
+        <div class="row row-fix d-block d-sm-block d-md-block d-lg-none d-xl-none">
+          <div class="col-lg-12 col-md-12 col-sm-12 col-12 h-100">
+          </div>
+        </div>
+        <div class="row fixed-bottom d-inline d-sm-inline d-md-inline d-lg-none d-xl-none mt-5" style="background-color:black;">
+          <app-footer class="w-100"></app-footer>
+        </div>
 </div>
 
