--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -3,6 +3,11 @@ a {
     font-family: Courier New;
     font-size:12px;
 }
+
+a:hover{
+    text-decoration: line-through;
+} 
+
 input{
     font-family: Courier New;
     font-size:12px;
