--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -19,8 +19,8 @@
 </div>
 <ul *ngIf="show === true" class="row mr-4">
   <li class="nav-item mx-auto">
-    <a class="nav-link" href="https://unmasterd.herokuapp.com/assets/db-sample.pdf" (click)="pdfEIR()">EIR.pdf</a>
-    <a class="nav-link" href="https://unmasterd.herokuapp.com/assets/db-sample.pdf" (click)="pdfDB()">DB.pdf</a>
+    <a class="nav-link" href="https://unmasterd.herokuapp.com/assets/db-sample.pdf">EIR.pdf</a>
+    <a class="nav-link" href="https://unmasterd.herokuapp.com/assets/db-sample.pdf">DB.pdf</a>
   </li>
 </ul>
   <div class="row mt-4 mb-5">     
