--- a/src/app/components/db/db.component.html
+++ b/src/app/components/db/db.component.html
@@ -1,11 +1,9 @@
 <div class="container ml-xl-5 ml-lg-5 mt-5" [BackDirective]="'white'" >
     <div class="main-row row mt-xl-5 ml-xl-5 pl-xl-5 mt-md-5 ml-md-5 pl-md-0">
+          <div class="col-12 pl-5 pl-sm-5 pl-md-2 mt-5 pr-5 d-inline d-sm-inline d-md-inline d-lg-none d-xl-none">
+            <app-header-black></app-header-black>
+          </div>
     <div class="col-lg-12 ml-md-5 pl-md-5 pr-md-0 col-xl-12 p-lg-5 m-lg-5 p-xl-5 m-xl-5">
-      <div class="row mt-5">
-                <div class="col-12 pl-5 pr-5">
-                  <app-header-black></app-header-black>
-                </div>
-        </div>
       <div class="row">
         <div class="col-lg-3 col-xl-3 col-md-10 ml-md-1 col-10 mt-2 mx-auto m-md-1 m-lg-1 text-center">
           <h5 class="pt-4 m-0 pb-0">PROSPECT.</h5>
