--- a/src/app/components/eir/eir.component.html
+++ b/src/app/components/eir/eir.component.html
@@ -36,7 +36,7 @@
   <img [routerLink]="['/home']" class="logo float-left mb-5 d-none d-sm-none d-md-none d-lg-inline d-xl-inline" src="../assets/img/logo-black.svg"
     alt="">
 </div>
-    <div class="row row-fix d-block d-sm-block d-md-block d-lg-none d-xl-none">
+    <div class="row row-fix d-block d-sm-block d-md-none d-lg-none d-xl-none">
       <div class="col-lg-12 col-md-12 col-sm-12 col-12 h-100">
       </div>
     </div>
