--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -52,7 +52,33 @@
             </div>
         </div>
     </div>
-    <div class="row mt-5">
-        <app-footer class="w-100"></app-footer>
+    <div class="row">
+        <div class="col-2 col-sm-2 col-md-6 col-lg-12 col-xl-12 p-0 mx-auto text-center">
+            <button class="sample " (click)="showLinks()">SAMPLE</button>
+        </div>
+    </div>
+    <ul *ngIf="showLink === true" class="row mr-4 row-link">
+        <li class="nav-item mx-auto">
+            <a class="nav-link" href="https://unmasterd.herokuapp.com/assets/db-sample.pdf">EIR.pdf</a>
+            <a class="nav-link" href="https://unmasterd.herokuapp.com/assets/db-sample.pdf">DB.pdf</a>
+        </li>
+    </ul>
+    <div class="row mt-4 mb-5">
+        <div class="col-8 col-sm-6  col-md-6  col-lg-12 col-xl-12 my-auto mt-5 mx-auto">
+            <form class="mx-auto" #contact="ngForm" (ngSubmit)="onSubmit(contact.value)">
+                <div class="form-group" [ngClass]="{ 'has-danger': email.invalid && (email.dirty || email.touched), 'has-success': email.valid && (email.dirty ||
+            email.touched)}">
+                    <input type="text" emailvalidator class="form-control text-center" required (ngModel)="this.email" name="email" placeholder="ENTER EMAIL"
+                        #email="ngModel">
+                </div>
+                <hr>
+                <div class="form-group" [ngClass]="{ 'has-danger': textarea.errors?.minlength, 'has-success':textarea.valid}">
+                    <textarea placeholder="ENTER MESSAGE" #textarea="ngModel" class="form-control" required minlength="5" maxlength="1000" (ngModel)="this.message"
+                        rows="5" name="message">
+            </textarea>
+                </div>
+                <button type="submit" [disabled]="!contact.form.valid" class="btn float-right">SUBMIT</button>
+            </form>
+        </div>
     </div>
 </div>
