--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -7,8 +7,14 @@
     <a class="nav-link" [routerLink]="['/projects']">PROJECTS</a>
   </li>
   <li class="nav-item pt-2">
-    <a class="nav-link" href="" style="color:white;"(click)="pdf()">SAMPLE</a>
-  </li>
+    <a class="sample nav-link" (click)="showLinks()">SAMPLE</a>
+    <ul *ngIf="showLink === true" class="row mr-4 row-link">
+      <li class="nav-item mx-auto">
+        <a class="nav-link" href="https://unmasterd.herokuapp.com/assets/db-sample.pdf">EIR.pdf</a>
+        <a class="nav-link" href="https://unmasterd.herokuapp.com/assets/db-sample.pdf">DB.pdf</a>
+      </li>
+    </ul>
+  </li>  
   <li class="nav-item pt-2">
     <a class="nav-link" [routerLink]="['/contact']">CONTACT</a>
   </li>
