--- a/src/app/components/db/db.component.css
+++ b/src/app/components/db/db.component.css
@@ -1,17 +1,29 @@
-.row-fix{
-    height: 425px;
+.mobile-row p{
+    font-size:11px;
 }
-
 .container{
     max-width: 100%;
-    height: auto;
+    max-height: 100%;
+}
+.category-large div{
+        border:0.5px solid #e3e3e3;
 }
 
-.col-lg-3{
-    border:1px solid #e3e3e3;
+.category-large div:hover{
+        border:0.5px solid black;
 }
 
-.col-lg-3:hover{
+.category div {
+    border:0.5px solid #e3e3e3;
+}
+
+.col-cat{   
+     border:1.5px solid #000 !important ;
+     border-left:none;
+}
+
+
+.category div:hover{
     border:1px solid #000;
 }
 
@@ -70,8 +82,6 @@ a p{
          position:absolute;
          left:9%;
      }
-
-
 }
 
 @media (min-width: 768px) {  
@@ -89,7 +99,6 @@ a p{
        position:relative;
        left:-8%;
     }
-
 }
 
 @media (min-width: 992px) {  
