--- a/src/app/components/eir/eir.component.html
+++ b/src/app/components/eir/eir.component.html
@@ -36,11 +36,5 @@
   <img [routerLink]="['/home']" class="logo float-left mb-5 d-none d-sm-none d-md-none d-lg-inline d-xl-inline" src="../assets/img/logo-black.svg"
     alt="">
 </div>
-    <div class="row row-fix d-block d-sm-block d-md-none d-lg-none d-xl-none">
-      <div class="col-lg-12 col-md-12 col-sm-12 col-12 h-100">
-      </div>
-    </div>
-    <div class="row fixed-bottom d-inline d-sm-inline d-md-none d-lg-none d-xl-none mt-5" style="background-color:black;">
-      <app-footer class="w-100"></app-footer>
-    </div>
+      <app-footer class="d-inline d-sm-inline d-md-none d-lg-none d-xl-none"></app-footer>
 </div>
