--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -1,3 +1,7 @@
+.foo{
+    background-color:black;
+}
+
 a {
     color:white;
     font-family: Courier New;
@@ -9,16 +13,22 @@ a:hover{
 } 
 
 input{
+    background-color:black;
     font-family: Courier New;
     font-size:12px;
+    color:white;
 }
+
 textarea{
+    background-color:black;
     font-family: Courier New;
     font-size:12px;
+    color:white;
 }
 button{
     font-family: Courier New;
     font-size:12px;
+    background-color:white;
 }
 
 row-fix{
@@ -34,4 +44,19 @@ row-fix{
     outline:none;
     color:white;
     font-size:18px;
+    font-family: Helvetica;
+    font-style:bold;
+}
+
+.form-control:focus {
+  background-color:black;
+  color:white;
+  border-color: #fff;
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(0, 0, 0, 0.2);
+}
+
+input:focus {
+  color:white;
+  background-color:black;
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(0, 0, 0, 0.2);
 }
