--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,4 +1,4 @@
-<div class="row p-3 ml-1">
+<div class="row p-3 mt-5 foo">
   <div class="col-3 col-sm-3 col-md-3 col-lg-12 col-xl-12 text-center">
       <a class="nav-link active" [routerLink]="['/sap']">SAP</a>
   </div>
@@ -12,18 +12,18 @@
     <a class="nav-link" [routerLink]="['/eir']">EIR</a>
   </div>
 </div>
-<div class="row">
+<div class="row foo">
   <div class="col-2 col-sm-2 col-md-6 col-lg-12 col-xl-12 p-0 mx-auto text-center">
     <button class="sample " (click)="showLinks()">SAMPLE</button>
   </div>
 </div>
-<ul *ngIf="show === true" class="row mr-4">
-  <li class="nav-item mx-auto">
+<ul *ngIf="show === true" class="row pl-4 foo mb-0">
+  <li class="nav-item mx-auto pr-3">
     <a class="nav-link" href="https://unmasterd.herokuapp.com/assets/db-sample.pdf">EIR.pdf</a>
     <a class="nav-link" href="https://unmasterd.herokuapp.com/assets/db-sample.pdf">DB.pdf</a>
   </li>
 </ul>
-  <div class="row mt-4 mb-5">     
+  <div class="row foo  pt-4 pb-5">     
     <div class="col-8 col-sm-6  col-md-6  col-lg-12 col-xl-12 my-auto mt-5 mx-auto">
       <form class="mx-auto" #contact="ngForm" (ngSubmit)="onSubmit(contact.value)">
         <div class="form-group" [ngClass]="{ 'has-danger': email.invalid && (email.dirty || email.touched), 'has-success': email.valid && (email.dirty ||
