--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -125,12 +125,5 @@
         <div *ngIf="mobile === true" class="row">
           <app-child-projects class="mx-auto"></app-child-projects>
         </div>
-        <div class="row-fix d-display d-sm-display d-md-none d-lg-none d-xl-none">
-          <div class="col-lg-12 col-md-12 col-sm-12 col-12">
-          
-          </div>
-        </div>  
-        <div class="row fixed-bottom d-inline d-sm-inline d-md-none d-lg-none d-xl-none mt-5" style="background-color:black;">
-          <app-footer class="w-100 mb-4"></app-footer>
-        </div>
 </div>
+<app-footer class="d-inline d-sm-inline d-md-none d-lg-none d-xl-none"></app-footer>
