--- a/src/app/components/db/db.component.html
+++ b/src/app/components/db/db.component.html
@@ -77,9 +77,9 @@
                     <h5 class="pt-4 m-0 pb-0">MIND MAP.</h5>
                     <p class="pb-2">Discover influence level.</p>
                 </div>
-                <div class="col-lg-3 col-xl-3 col-md-12 col-sm-12 col-12 text-center">
+                <div class="col-lg-3 col-xl-3 col-md-12 col-sm-12 col-12 text-center fix">
                     <h5  class="pt-4 m-0 pb-0">TENURE.</h5>
-                    <p class="pb-2 pb-sm-2 pb-md-2">Experience goes a long way.</p>
+                    <p class="pb-2 pb-sm-3 pb-md-2">Experience goes a long way.</p>
                 </div>
               </div>
               </div>
@@ -95,7 +95,7 @@
                   </div>
                   <div class="col-lg-3 col-xl-3 col-md-12 col-sm-12 col-12 text-center">
                     <h5 class="pt-4 m-0 pb-0">CLASSIFY.</h5>
-                    <p class="pb-2 pb-sm-2 pb-md-2">Sort. Filter. Pivot.</p>
+                    <p class="pb-2 pb-sm-3 pb-md-2">Sort. Filter. Pivot.</p>
                   </div>
                 </div>
               </div>
