--- a/src/app/components/sap/sap.component.html
+++ b/src/app/components/sap/sap.component.html
@@ -1,5 +1,5 @@
-<div class="container mt-5 p-0" [BackDirective]="'white'">
-  <div class="row mt-5">
+<div class="container p-0" [BackDirective]="'white'">
+  <div class="row">
     <div class="col-12 pl-5 mt-5 pr-5">
           <app-header-black></app-header-black>
     </div>
