--- a/src/app/components/eir/eir.component.html
+++ b/src/app/components/eir/eir.component.html
@@ -1,10 +1,10 @@
-<div class="container mt-5 mt-sm-0 mt-md-0 mt-lg-5 mt-xl-5 p-0" [BackDirective]="'white'">
-    <div class="row mt-0 mt-sm-0 mt-md-0 mt-lg-5 mt-xl-5">
+<div class="container mt-5 mt-sm-0 mt-md-0 mt-xl-5 p-0" [BackDirective]="'white'">
+    <div class="row mt-0 mt-sm-0 mt-md-0  mt-xl-5">
         <div class="col-12 pl-5 mt-5 pr-5">
           <app-header-black></app-header-black>
         </div>
        </div>
-  <div class="row mt-0  mt-sm-0 mt-md-0 mt-lg-5 mt-xl-5">
+  <div class="row mt-0  mt-sm-0 mt-md-5 mt-lg-5 mt-xl-5">
     <div class="accordion mx-auto d-none d-sm-none d-md-inline d-lg-inline d-xl-inline col-8 col-sm-12 col-md-12 col-lg-12 col-xl-12 ">
       <ul>
         <li>
@@ -19,7 +19,7 @@
     </div>
    </div>
    <div class="row d-display d-sm-display d-md-none d-lg-none d-xl-none">
-     <div class="col-12 col-sm-12 col-md-12 pr-0 pr-sm-0 pr-md-0">
+     <!-- <div class="col-12 col-sm-12 col-md-12 pr-0 pr-sm-0 pr-md-0">
           <img src="../assets/img/slide-1.png" alt="">
      </div>
     <div class="col-12 col-sm-12 col-md-12 pr-0 pr-sm-0 pr-md-0">
@@ -30,7 +30,8 @@
     </div>
     <div class="col-12 col-sm-12 col-md-12 pr-0 pr-sm-0 pr-md-0">
           <img src="../assets/img/slide-4.png" alt="">
-    </div>
+    </div> -->
+    <app-carousel></app-carousel>
     </div>
 <div class="row mt-5 ml-lg-5 pl-lg-5">
   <img [routerLink]="['/home']" class="logo float-left mb-5 d-none d-sm-none d-md-none d-lg-inline d-xl-inline" src="../assets/img/logo-black.svg"
