--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -1,4 +1,4 @@
-    <div  class="container mt-5" [BackDirective]="'white'">
+    <div  class="container" [BackDirective]="'white'">
         <div  class="row mt-2">
           <div class="col-12 pl-4 mt-5">
               <app-header-black></app-header-black>
