--- a/src/app/components/eir/eir.component.html
+++ b/src/app/components/eir/eir.component.html
@@ -1,6 +1,6 @@
 <div class="container mt-5 mt-sm-0 mt-md-0 mt-xl-5 p-0" [BackDirective]="'white'">
     <div class="row mt-0 mt-sm-0 mt-md-0  mt-xl-5">
-        <div class="col-12 pl-5 mt-5 pr-5">
+        <div class="col-12 pl-5 mt-xl-5 mt-lg-5  mt-md-5 mt-sm-5 pr-5">
           <app-header-black></app-header-black>
         </div>
        </div>
@@ -19,7 +19,7 @@
     </div>
    </div>
    <div class="row d-display d-sm-display d-md-none d-lg-none d-xl-none">
-     <!-- <div class="col-12 col-sm-12 col-md-12 pr-0 pr-sm-0 pr-md-0">
+     <div class="col-12 col-sm-12 col-md-12 pr-0 pr-sm-0 pr-md-0">
           <img src="../assets/img/slide-1.png" alt="">
      </div>
     <div class="col-12 col-sm-12 col-md-12 pr-0 pr-sm-0 pr-md-0">
@@ -30,8 +30,7 @@
     </div>
     <div class="col-12 col-sm-12 col-md-12 pr-0 pr-sm-0 pr-md-0">
           <img src="../assets/img/slide-4.png" alt="">
-    </div> -->
-    <app-carousel></app-carousel>
+    </div>
     </div>
 <div class="row mt-5 ml-lg-5 pl-lg-5">
   <img [routerLink]="['/home']" class="logo float-left mb-5 d-none d-sm-none d-md-none d-lg-inline d-xl-inline" src="../assets/img/logo-black.svg"
