--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -3,21 +3,46 @@
     font-family: Courier New;
     font-size:12px;
 }
+
+.foo{
+    background-color:black;
+}
+
+a:hover{
+    text-decoration: line-through;
+} 
+
 input{
+    background-color:black;
     font-family: Courier New;
     font-size:12px;
+    color:white;
 }
+
 textarea{
+    background-color:black;
     font-family: Courier New;
     font-size:12px;
+    color:white;
 }
+
 button{
     font-family: Courier New;
     font-size:12px;
+    background-color:white;
 }
 
-row-fix{
-    height: 35%;
+.form-control:focus {
+  background-color:black;
+  color:white;
+  border-color: #fff;
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(0, 0, 0, 0.2);
+}
+
+input:focus {
+  color:white;
+  background-color:black;
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(0, 0, 0, 0.2);
 }
 
 .sample{
