--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -8,13 +8,11 @@
   </li>
   <li class="nav-item pt-2">
     <a class="sample nav-link" (click)="showLinks()">SAMPLE</a>
-    <ul *ngIf="showLink === true" class="row mr-4 row-link">
-      <li class="nav-item mx-auto">
-        <a class="nav-link" href="https://unmasterd.herokuapp.com/assets/db-sample.pdf">EIR.pdf</a>
-        <a class="nav-link" href="https://unmasterd.herokuapp.com/assets/db-sample.pdf">DB.pdf</a>
-      </li>
-    </ul>
   </li>  
+  <li *ngIf="showLink === true" class="nav-item p-0 mx-auto">
+    <a class="nav-link" href="https://unmasterd.herokuapp.com/assets/db-sample.pdf">EIR.pdf</a>
+    <a class="nav-link" href="https://unmasterd.herokuapp.com/assets/db-sample.pdf">DB.pdf</a>
+  </li>
   <li class="nav-item pt-2">
     <a class="nav-link" [routerLink]="['/contact']">CONTACT</a>
   </li>
