--- a/src/app/components/sap/sap.component.html
+++ b/src/app/components/sap/sap.component.html
@@ -4,7 +4,7 @@
           <app-header-black></app-header-black>
     </div>
   </div>
-  <div class="row mt-4">
+  <div class="row mt-4 mb-5 h-50">
     <div class="col-8 col-sm-8 col-md-6 col-lg-5  col-xl-4 mx-auto">
       <p>The market is ever changing, and so are we.</p>
       <p>No report is the same, and we take extra measures to experiment with new ideas
@@ -16,12 +16,6 @@
       </p>
     </div>
   </div>
-        <div class="row row-fix d-block d-sm-block d-md-block d-lg-none d-xl-none">
-          <div class="col-lg-12 col-md-12 col-sm-12 col-12 h-100">
-          </div>
-        </div>
-        <div class="row fixed-bottom d-inline d-sm-inline d-md-inline d-lg-none d-xl-none mt-5" style="background-color:black;">
-          <app-footer class="w-100"></app-footer>
-        </div>
-</div>
 
+</div>
+<app-footer class="d-inline d-sm-inline d-md-none d-lg-none d-xl-none"></app-footer>
