--- a/src/app/components/header-black/header-black.component.html
+++ b/src/app/components/header-black/header-black.component.html
@@ -4,5 +4,5 @@
             alt="">
   </div>
   <div class="row mt-4 ">
-    <p class="mx-auto date d-none d-sm-inline d-md-inline d-lg-inline d-xl-inline">{{ valueDate | date: 'MM/dd/yyyy h:mm a' }}</p>
+    <p class="mx-auto date d-none d-sm-inline d-md-inline d-lg-none d-xl-inline">{{ valueDate | date: 'MM/dd/yyyy h:mm a' }}</p>
   </div>
