--- a/src/app/components/eir/eir.component.html
+++ b/src/app/components/eir/eir.component.html
@@ -1,8 +1,8 @@
-<div class="container mt-5 mt-sm-0 mt-md-0 mt-xl-5 p-0" [BackDirective]="'white'">
-    <div class="row mt-0 mt-sm-0 mt-md-0  mt-xl-5">
-        <div class="col-12 pl-5 mt-xl-5 mt-lg-5  mt-md-5 mt-sm-5 pr-5">
-          <app-header-black></app-header-black>
-        </div>
+<div class="container mt-5 mt-sm-0 mt-md-0 mt-lg-0 mt-xl-0 p-0" [BackDirective]="'white'">
+    <div class="row mt-0 mt-sm-0 mt-md-0">
+                  <div class="col-12 mt-5 pl-5 d-inline d-sm-inline d-md-none d-lg-none d-xl-none">
+                    <app-header-black></app-header-black>
+                  </div>
        </div>
   <div class="row mt-0  mt-sm-0 mt-md-5 mt-lg-5 mt-xl-5">
     <div class="accordion mx-auto d-none d-sm-none d-md-inline d-lg-inline d-xl-inline col-8 col-sm-12 col-md-12 col-lg-12 col-xl-12 ">
@@ -32,8 +32,8 @@
           <img src="../assets/img/slide-4.png" alt="">
     </div>
     </div>
-<div class="row mt-5 ml-lg-5 pl-lg-5">
-  <img [routerLink]="['/home']" class="logo float-left mb-5 d-none d-sm-none d-md-none d-lg-inline d-xl-inline" src="../assets/img/logo-black.svg"
+<div class="row mt-5 ml-sm-5 ml-lg-5 pl-lg-5">
+  <img [routerLink]="['/home']" class="logo float-left mb-5 d-none d-sm-none d-md-inline d-lg-inline d-xl-inline" src="../assets/img/logo-black.svg"
     alt="">
 </div>
       <app-footer class="d-inline d-sm-inline d-md-none d-lg-none d-xl-none"></app-footer>
