--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -10,8 +10,8 @@
     <a class="sample nav-link" (click)="showLinks()">SAMPLE</a>
   </li>  
   <li *ngIf="showLink === true" class="nav-item p-0 mx-auto">
-    <a class="nav-link" href="https://unmasterd.herokuapp.com/assets/db-sample.pdf">EIR.pdf</a>
-    <a class="nav-link" href="https://unmasterd.herokuapp.com/assets/db-sample.pdf">DB.pdf</a>
+    <a class="nav-link sample" (click)="pdfEIR()">EIR.pdf</a>
+    <a class="nav-link sample" (click)="pdfDB()">DB.pdf</a>
   </li>
   <li class="nav-item pt-2">
     <a class="nav-link" [routerLink]="['/contact']">CONTACT</a>
