--- a/src/app/components/eir/eir.component.css
+++ b/src/app/components/eir/eir.component.css
@@ -155,12 +155,16 @@ h1 {
   }  
   .accordion {
     max-width: 700px;
+    max-height: 700px;
+
   }
 }
 
 @media (min-width: 1200px) { 
   .accordion {
     max-width: 700px;
+    max-height: 700px;
+
   }
 
   .container{
