--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -19,8 +19,8 @@
 </div>
 <ul *ngIf="show === true" class="row pl-4 foo mb-0">
   <li class="nav-item mx-auto pr-3">
-        <a class="nav-link sample" (click)="pdfEIR()">EIR.pdf</a>
-        <a class="nav-link sample" (click)="pdfDB()">DB.pdf</a>
+        <a class="nav-link sample1" (click)="pdfEIR()">EIR.pdf</a>
+        <a class="nav-link sample1" (click)="pdfDB()">DB.pdf</a>
   </li>
 </ul>
   <div class="row foo  pt-4 pb-5">     
