--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -54,6 +54,20 @@ input:focus {
     outline:none;
     color:white;
     font-size:18px;
+    font-family: Helvetica;
+    font-style:bold;
+}
+
+.sample1:hover{
+    text-decoration: line-through;
+} 
+
+.sample1{
+    cursor:pointer;
+    color:white;
+    font-size:12px;
+    font-family: Helvetica;
+    font-style:bold;
 }
 
 .logo{
