--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -59,8 +59,8 @@
     </div>
     <ul *ngIf="showLink === true" class="row mr-4 row-link">
         <li class="nav-item mx-auto">
-            <a class="nav-link sample"  (click)="pdfEIR()">EIR.pdf</a>
-            <a class="nav-link sample" (click)="pdfDB()">DB.pdf</a>
+            <a class="nav-link sample1"  (click)="pdfEIR()">EIR.pdf</a>
+            <a class="nav-link sample1" (click)="pdfDB()">DB.pdf</a>
         </li>
     </ul>
     <div class="row mt-4 mb-5">
