--- a/src/app/components/sap/sap.component.html
+++ b/src/app/components/sap/sap.component.html
@@ -5,7 +5,7 @@
     </div>
   </div>
   <div class="row mt-4 mb-5 h-50">
-    <div class="col-8 col-sm-8 col-md-6 col-lg-5  col-xl-4 mx-auto">
+    <div class="col-8 col-sm-8 col-md-6 col-lg-5  col-xl-4 mt-5 pt-5 mt-sm-5 pt-sm-5 mt-md-5 pt-md-5 mx-auto">
       <p>The market is ever changing, and so are we.</p>
       <p>No report is the same, and we take extra measures to experiment with new ideas
       / visuals to bring an authentic and versatile collection of insights. 
@@ -17,4 +17,6 @@
     </div>
   </div>
 </div>
-<app-footer class="d-inline d-sm-inline d-md-none d-lg-none d-xl-none"></app-footer>
+    <div class="col-12 col-sm-12 col-md-12 mt-5 pt-5 mt-sm-5 pt-sm-5  mt-md-5 pt-md-5">
+
+<app-footer class="d-inline d-sm-inline d-md-none d-lg-none d-xl-none mt-5 pt-5 mt-sm-5 pt-sm-5 mt-md-5 pt-md-5"></app-footer></div>
