--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,6 +1,6 @@
 <div class="row mt-5">
-  <div class="col-3 col-sm-3 col-md-3 col-lg-3 col-xl-3 mx-auto text-center">
-    <img src="./assets/logo-white.svg" alt="" class="logo img-fluid">
+  <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 mx-auto text-center">
+    <img src="./assets/logo-white.svg" alt="" class="logo">
   </div>
 </div>
 <div class="row mt-2">
