--- a/src/app/components/email/email.component.html
+++ b/src/app/components/email/email.component.html
@@ -1,6 +1,6 @@
-<div class="container mt-5">
-  <div class="row mt-5 w-100">
-    <div class="col-3 col-sm-3 col-md-3 col-lg-3 col-xl-3 mx-auto mt-5">
+<div class="container mt-5 p-0">
+  <div class="row mt-5 w-100 p-0 mr-5">
+  <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 mx-auto text-center">
       <form #contact="ngForm" (ngSubmit)="onSubmit(contact.value)">
         <div class="input-group rounded-0" [ngClass]="{ 'has-danger': email.invalid && (email.dirty || email.touched), 'has-success': email.valid
         && (email.dirty || email.touched)}">
