--- a/src/styles.css
+++ b/src/styles.css
@@ -5,7 +5,49 @@ html{
 body {
     height: 100%;
     background-image:url('./assets/back.jpg');
-    background-size:100% auto;
+    background-size:100% 100%;
     background-color:black !important;
     overflow: hidden;   
+}
+
+@media (min-width: 576px) { 
+    body {
+    height: 100%;
+    background-image:url('./assets/back.jpg');
+    background-size:100% 100%;
+    background-color:black !important;
+    overflow: hidden;   
+}
+
+}
+
+@media (min-width: 768px) {
+    body {
+        height: 100%;
+        background-image:url('./assets/back.jpg');
+        background-size:100% 100%;
+        background-color:black !important;
+        overflow: hidden;   
+    }
+}
+
+@media (min-width: 992px) {  
+    body {
+        height: 100%;
+        background-image:url('./assets/back.jpg');
+        background-size:100% 100%;
+        background-color:black !important;
+        overflow: hidden;   
+    }
+}
+
+@media (min-width: 1200px) { 
+    body {
+        height: 100%;
+        background-image:url('./assets/back.jpg');
+        background-size:100% 100%;
+        background-color:black !important;
+        overflow: hidden;   
+    }
+
 }
