--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container-fluid mb-5 h-50">
     <router-outlet></router-outlet>
 </div>
-<app-email></app-email>
+<app-email class="mr-5"></app-email>
