--- a/src/app/components/email/email.component.css
+++ b/src/app/components/email/email.component.css
@@ -20,3 +20,19 @@ button{
     font-family: Arial;
     color:black;
 }
+
+.has-danger{
+    border:2px solid rgba(255,0,0, 0.4);
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(255,0,0, 0.4);
+}
+
+.has-success{
+    border:2px solid rgba(0, 255, 0, 0.815);
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(0, 0, 0, 0.2);
+
+}
+
+.form-control:focus {
+  border-color: #fff;
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(0, 0, 0, 0.2);
+}
